--- a/overview/architecture-features-integration/architecture-diagram.mdx
+++ b/overview/architecture-features-integration/architecture-diagram.mdx
@@ -1,200 +1,179 @@
 ---
-title: "System Architecture"
-description: "Visualizes and explains the main architectural components, how GoogleTest and GoogleMock interact, and the role of key modules. Includes a high-level mermaid diagram to depict test code, the framework, and the execution pathway."
+title: "System Architecture Overview"
+description: "Visualize the structure and primary data flow of GoogleTest and GoogleMock. See how test cases, assertions, matchers, and mocks interact at the core level, and get a map of key system components and extension points. Includes a mermaid diagram summarizing the test runner, user test code, and result processing."
 ---
 
-# System Architecture
+# System Architecture Overview
 
-## Understanding the Core Architecture of GoogleTest and GoogleMock
+Explore the foundational structure and primary data flows that power GoogleTest and GoogleMock. This page provides a concise map of the core components — from how your user test code interacts with the test runner, to how assertions, matchers, and mocks are processed and verified.
 
-GoogleTest and GoogleMock together form Google’s powerful C++ testing framework. This page offers a clear, user-focused visualization of the system’s main architectural components, illustrating how your test code interacts with the framework and how GoogleTest and GoogleMock collaborate during test execution.
-
----
-
-### Why System Architecture Matters
-
-When you write and run tests, understanding the architectural flow lets you harness the framework's full power. You gain insight into:
-
-- How your test code integrates smoothly with the framework
-- How GoogleTest provides test discovery, execution, and reporting
-- How GoogleMock supplements testing by allowing precise control and verification of mock objects
-
-This understanding helps you troubleshoot, extend, and optimize your tests effectively.
+Understanding this architecture prepares you to write effective tests, leverage extensibility, and troubleshoot with insight.
 
 ---
 
-### Overview of the Architecture
+## What You'll See Here
 
-At a high level, the GoogleTest and GoogleMock architecture can be visualized as follows:
+This page presents a visual and conceptual overview of the key system components involved during test execution. It reveals:
 
-- **Test Code:** Your test cases, fixtures, and mock objects
-- **GoogleTest Framework:** Core infrastructure for test discovery, execution control, assertion handling, and reporting
-- **GoogleMock Add-on:** Provides mocking capabilities; integrates tightly with GoogleTest to verify interactions
-- **Test Execution:** The runtime process that executes tests, applies assertions, enforces expectations, and outputs results
+- The flow of test cases from user-written code through the test runner
+- How assertions, matchers, and mocks collaborate to validate behavior
+- The points where extensions and customizations can integrate
 
-The flow starts when the test program runs and calls into the framework, which discovers tests, executes them (along with any mock expectations), then reports the pass/fail status.
+At its heart, this overview clarifies the interactions between your code, the testing framework, and the underlying result processing mechanisms.
 
 ---
 
-### Mermaid Diagram: GoogleTest & GoogleMock System Architecture
+## High-Level Architecture Explained
+
+At a high level, GoogleTest and GoogleMock operate through a well-orchestrated sequence of components working together:
+
+1. **User Test Code:** Your test functions and test fixtures define test cases and expectations.
+2. **Test Runner:** Orchestrates test lifecycle — setup, execution, and teardown.
+3. **Assertions & Matchers:** Evaluate conditions and parameter matches within tests.
+4. **Mocks:** Simulate complex dependencies, verifying interactions as specified.
+5. **Result Processor:** Collects and communicates test outcomes.
+
+Each component plays a vital role in ensuring your tests are expressive, reliable, and maintainable.
+
+---
+
+## Core Components and Their Roles
+
+- **Test Runner:**
+  - Controls the execution of all registered tests.
+  - Manages test suites, test cases, and their state.
+  - Reports results through listeners.
+
+- **User Test Code:**
+  - Contains the actual tests you create.
+  - Defines expectations for mocks and assertions.
+  - Calls GoogleTest and GoogleMock APIs.
+
+- **Assertions:**
+  - Check state and values within tests.
+  - Use matchers to specify flexible validation rules.
+
+- **Matchers:**
+  - Facilitate detailed argument checking for mocks.
+  - Provide expressive conditions (e.g., ranges, patterns).
+
+- **Mocks:**
+  - Replace real objects with controllable test doubles.
+  - Capture call counts, argument patterns, and ordering.
+
+- **Extension Points:**
+  - Allow custom matchers, actions, and behaviors.
+  - Enable fine-grained control over mock interaction.
+
+---
+
+## Visual Summary: System Data Flow
 
 ```mermaid
 flowchart TD
-
-  subgraph TC ["Test Code"]
-    UserTests["User Test Suites & Cases"]
-    TestFixtures["Test Fixture Classes"]
-    MockObjects["Mock Classes & Expectations"]
+  subgraph User Layer
+    UT["User Test Code"]
   end
 
-  subgraph GT ["GoogleTest Framework"]
-    TestRegistry["Test Registry (Stores Tests)"]
-    TestRunner["Test Runner (Executes Tests)"]
-    Assertions["Assertions & Result Tracking"]
-    ReportGenerator["Test Result Reporting"]
+  subgraph Core Test Runner
+    TR["Test Runner"]
+    RP["Result Processor"]
   end
 
-  subgraph GM ["GoogleMock"]
-    MockSyntax["Declarative Mock Syntax"]
-    MatcherEngine["Function Argument Matchers"]
-    ExpectationChecker["Expectation Verifier & Auto-Verification"]
+  subgraph Verification Layer
+    AS["Assertions"]
+    MH["Matchers"]
+    MO["Mocks"]
   end
 
-  subgraph ExecutionFlow ["Test Execution Pathway"]
-    MainEntry["Main() / test executable start"]
-    InitGTest["testing::InitGoogleTest()"]
-    RunAll["RUN_ALL_TESTS()"]
-    Discover["Test Discovery"]
-    Execute["Test Execution & Mock Verification"]
-    Output["Test Results Output"]
-    Exit["Exit with Test Status"]
-  end
+  %% User test code invokes the test runner
+  UT -->|"Invoke Tests"| TR
 
-  %% Connections
-  MainEntry --> InitGTest
-  InitGTest --> RunAll
-  RunAll --> Discover
-  Discover --> TestRegistry
-  RunAll --> Execute
+  %% Test runner coordinates mocks and assertions
+  TR -->|"Calls Mock Methods"| MO
+  TR -->|"Executes Assertions"| AS
 
-  %% Test execution flow
-  Execute --> UserTests
-  Execute --> TestFixtures
-  Execute --> MockObjects
-  Execute --> TestRunner
-  TestRunner --> Assertions
-  TestRunner --> ExpectationChecker
-  ExpectationChecker --> MatcherEngine
-  MockObjects --> MockSyntax
+  %% Mocks rely on matchers for argument validation
+  MO --> MH
 
-  Execute --> ReportGenerator
-  ReportGenerator --> Output
-  Output --> Exit
+  %% Assertions use matchers to check values
+  AS --> MH
 
-  %% Label styles
-  classDef groupTitle fill:#f0f8ff,stroke:#0a6,stroke-width:1px,font-weight:bold
-  class TC,GT,GM,ExecutionFlow groupTitle
+  %% Mock and assertion results collected
+  MO --> RP
+  AS --> RP
+  TR --> RP
 
+  %% Result processor outputs final test results
+  RP -->|"Test Outcome"| UT
+
+  %% Extension points between verification and mocks
+  MH -.->|"Custom Matchers"| MO
+  MO -.->|"Custom Actions"| MH
+
+  classDef userLayer fill:#f9f,stroke:#333,stroke-width:1px;
+  classDef coreLayer fill:#8fbcd4,stroke:#333,stroke-width:1px;
+  classDef verifyLayer fill:#d4a283,stroke:#333,stroke-width:1px;
+
+  class UT userLayer;
+  class TR,RP coreLayer;
+  class AS,MH,MO verifyLayer;
 ```
 
 ---
 
-### Walkthrough of the Components and Workflow
+## How This Fits Into GoogleTest Documentation
 
-#### 1. Test Code
+This overview complements other documentation focused on detailed user workflows, core APIs, and mocking techniques:
 
-*This is your code.*
+- Visit **[Product Value & Benefits](/overview/product-intro-concepts/product-value-prop)** for why GoogleTest/Mock matters.
+- Review **[Core Concepts & Testing Terminology](/overview/product-intro-concepts/core-concepts-terminology)** to understand testing basics.
+- Dive into **[Writing Your First Unit Test](/guides/core-workflows/writing-unit-tests)** to start hands-on.
+- Explore **[Mocking for Dummies](/docs/gmock_for_dummies.md)** for practical mock creation basics.
 
-- Define **Test Suites and Test Cases** using `TEST()` or `TEST_F()` macros.
-- Implement **Test Fixtures** when multiple tests share setup/teardown logic.
-- Create **Mock Objects** using GoogleMock's declarative syntax to simulate dependencies.
-
-This code exercises your implementation and verifies correctness.
-
-#### 2. GoogleTest Framework
-
-*The engine behind your tests.*
-
-- The **Test Registry** auto-discovers all tests registered via macros.
-- The **Test Runner** controls the lifecycle: setup, test execution, teardown.
-- **Assertions** check conditions; failures update result status.
-- The **Report Generator** formats and outputs detailed pass/fail feedback.
-
-#### 3. GoogleMock Add-on
-
-*Extends testing with mocks and expectations.*
-
-- The **Declarative Mock Syntax** lets you define mock classes easily.
-- The **Matcher Engine** validates function call arguments against expectations.
-- The **Expectation Checker** verifies calls occurred as intended and auto-fails tests on mismatches.
-
-GoogleMock integrates seamlessly, verifying interactions on mock objects during test execution.
-
-#### 4. Test Execution Pathway
-
-*The lifecycle of running tests.*
-
-- Your test program begins with a `main()` function or links to `gtest_main`.
-- Call `testing::InitGoogleTest()` to parse flags and initialize.
-- Invoke `RUN_ALL_TESTS()` to start test discovery and execution.
-- Tests run one by one; mocks are verified automatically.
-- Results report to console or custom listeners.
-- Exit status reflects overall test success or failure.
+This page offers the architectural map that connects those practical guides with the underlying mechanics.
 
 ---
 
-### Practical Example: What Happens When You Run Tests?
+## Practical Tips for Users
 
-Assume you have a mock class `MockDatabase` and a test suite `UserServiceTest`:
-
-1. `RUN_ALL_TESTS()` triggers discovery — the framework finds `UserServiceTest`.
-2. The **Test Runner** creates fixture objects and invokes test functions.
-3. Inside a test, you set expectations on `MockDatabase` (e.g., expect `Connect()` called once).
-4. Your code under test interacts with `MockDatabase`.
-5. GoogleMock verifies expectations as tests run; assertion failures or mock mismatches cause test failures.
-6. The framework gathers results, generating a detailed report.
-7. The process repeats for each test.
+- Think of the test runner as your test conductor, coordinating when and how your tests execute without you needing to manage that explicitly.
+- Use mocks to isolate your unit tests and concentrate on the logic under test instead of external dependencies.
+- Leverage matchers for expressive assertions beyond simple equality, making your intentions clearer and tests more maintainable.
+- Customize behaviors through extension points only after mastering the standard APIs to keep test code simple and comprehensible.
 
 ---
 
-### Tips and Best Practices
+## Troubleshooting the System Architecture
 
-- Treat **Test Suites** and **Fixtures** as your test organization tools — they map your tests logically.
-- Use GoogleMock to **simulate dependencies** you can't or don’t want to instantiate directly.
-- Remember **automatic test discovery** lets you add tests without updating test runners.
-- Failure in an assertion or mock expectation immediately marks the test as failed but allows other tests to continue.
-- Use your knowledge of the architecture to **debug** by inspecting the flow from test code through the framework.
+If tests fail unexpectedly or mock expectations are not verified:
 
----
+- Ensure your test cases have the correct lifecycle (registered and run by the test runner).
+- Validate that your mocks and expectations are set before exercising the code.
+- Understand how matchers influence mock method verification—misused or overly strict matchers may cause failures.
+- Confirm your environment supports necessary features like stack trace generation for rich failure reporting.
 
-### Troubleshooting Common Issues
-
-<AccordionGroup title="Troubleshooting Tips for System Architecture">
-<Accordion title="Tests Not Running or Being Discovered">
-Make sure your test cases are properly declared with `TEST()`, `TEST_F()`, or `TEST_P()`.
-Ensure your executable links against the GoogleTest libraries and calls `RUN_ALL_TESTS()`.
-</Accordion>
-<Accordion title="Mock Expectations Not Verified">
-Verify that GoogleMock is linked correctly and that expectations are set before exercising code.
-Remember mock objects auto-verify expectations at test teardown.
-</Accordion>
-<Accordion title="Test Execution Stalls or Deadlocks in Multi-threading">
-GoogleTest is thread-safe if pthreads are available. For multi-threaded tests, carefully manage synchronization to avoid deadlocks.
-</Accordion>
-</AccordionGroup>
+Understanding this architecture shines light on where issues may occur.
 
 ---
 
-### Next Steps
+## Next Steps
 
-With this architectural understanding, you are prepared to:
+To implement tests effectively, proceed to:
 
-- Dive into [Feature Overview](/overview/architecture-features-integration/feature-overview) to see the framework capabilities.
-- Begin integration using [Integrating with Your Build & CI](/overview/architecture-features-integration/integration-scenarios).
-- Explore [Core Concepts & Terminology](/overview/intro-core-concepts/core-concepts-terminology) to master key Googletest terms.
+- **Writing and Running Your First Unit Test:** Learn how to author and execute tests.
+- **Using Assertions Effectively:** Understand how to verify conditions.
+- **Getting Started with Mocking:** Begin mocking dependencies.
 
-This foundation empowers you to write robust, maintainable, and efficient C++ tests with GoogleTest and GoogleMock.
+Visit these sections under the [Guides tab](../../guides/core-workflows/) for hands-on examples and deep dives.
 
 ---
 
-*End of System Architecture Documentation*
+For detailed API references and advanced topics, explore the [API Reference tab](../../api-reference/) and [Guides](../../guides/).
+
+---
+
+## Summary
+This page demystifies the core architecture of GoogleTest and GoogleMock by detailing how your user test code interacts with the test runner and how assertions, matchers, and mocks collaborate and feed results into the result processor. The included Mermaid diagram offers a clear, concise visualization of these relationships, helping you build a mental model for effective testing and debugging.
+
+---
